--- a/lib/script_web/templates/layout/app.html.eex
+++ b/lib/script_web/templates/layout/app.html.eex
@@ -14,7 +14,8 @@
   <body>
     <div class="container">
       <header class="header">
-        <span class="logo"></span>
+        <div class="logo"></div>
+        <h4 class="tag_line">Where health meets home delivery.</h4>
       </header>
 
       <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
