--- a/lib/script_web/templates/register/index.html.eex
+++ b/lib/script_web/templates/register/index.html.eex
@@ -1,6 +1,6 @@
 <div class="jumbotron">
     <div class="row reg_log back">
-      <h2>Login</h2>
+      <h2>Register</h2>
       <a class="col-sm-2 col-sm-offset-5 btn text-center" id="go_back" href="/">Go Back</a>
 
    </div>
