--- a/lib/script_web/templates/home/index.html.eex
+++ b/lib/script_web/templates/home/index.html.eex
@@ -1,9 +1,9 @@
 <div class="jumbotron">
-  <nav role="navigation">
-    <div class="nav row">
-      <a class="col-sm-2 col-sm-offset-5 btn text-center" id="login" href="/Login">Login</a>
+    <div class="row">
+      <div class="col-sm-6 col-sm-offset-4 reg_log">
+      <a class="col-sm-4 btn text-center" id="register" href="/Register">Register</a>
+      <a class="col-sm-4 btn text-center" id="login" href="/Login">Login</a>
     </div>
-  </nav>
-  <h2>Where health meets home delivery.</h2>
+  </div>
  <h5>&copy; 2018</h5>
 </div>
