--- a/lib/script_web/templates/home/index.html.eex
+++ b/lib/script_web/templates/home/index.html.eex
@@ -2,7 +2,7 @@
     <div class="row">
       <div class="col-sm-6 col-sm-offset-4 reg_log">
       <a class="col-sm-4 btn text-center" id="register" href="/Register">Register</a>
-      <a class="col-sm-4 btn text-center" id="login" href="/Login">Login</a>
+      <a class="col-sm-4 btn text-center" id="login" href="/Session">Login</a>
     </div>
   </div>
  <h5>&copy; 2018</h5>
