--- a/lib/script_web/templates/user/edit.html.eex
+++ b/lib/script_web/templates/user/edit.html.eex
@@ -2,4 +2,7 @@
 
 <%= render "form.html", Map.put(assigns, :action, user_path(@conn, :update, @user)) %>
 
-<span><%= link "Back", to: user_path(@conn, :index) %></span>
+<div class="row back">
+  <a class="col-sm-2 col-sm-offset-5 btn text-center" id="go_back" href="/">Go Back</a>
+</div>
+<h5 class="copy">&copy; 2018</h5>
