--- a/lib/script_web/templates/user/form.html.eex
+++ b/lib/script_web/templates/user/form.html.eex
@@ -12,8 +12,9 @@
     <%= error_tag cf, :email %>
   <% end %>
   </div>
+
   <div class="form-group">
-    <%= label f, :email, class: "control-label" %>
+    <%= label f, "Confirm Email", class: "control-label" %>
     <%= text_input f, :email, class: "form-control" %>
     <%= error_tag f, :email %>
   </div>
@@ -24,8 +25,18 @@
     <%= error_tag f, :password %>
   </div>
 
+  <div class="form-group">
+    <%= label f, "Confirm Password", class: "control-label" %>
+    <%= text_input f, :password, class: "form-control" %>
+    <%= error_tag f, :password %>
+  </div>
+
 
   <div class="form-group">
-    <%= submit "Submit", class: "btn btn-primary" %>
+    <%= submit "Submit", class: "btn", id: "submit" %>
   </div>
 <% end %>
+<div class="row reg_log back">
+<a class="col-sm-2 col-sm-offset-5 btn text-center" id="go_back" href="/">Go Back</a>
+</div>
+<h5 class="copy">&copy; 2018</h5>
