--- a/lib/script_web/templates/user/index.html.eex
+++ b/lib/script_web/templates/user/index.html.eex
@@ -4,7 +4,6 @@
   <thead>
     <tr>
       <th>Email</th>
-      <th>Password</th>
 
       <th></th>
     </tr>
@@ -13,7 +12,6 @@
 <%= for user <- @users do %>
     <tr>
       <td><%= user.email %></td>
-      <td><%= user.password %></td>
 
       <td class="text-right">
         <span><%= link "Show", to: user_path(@conn, :show, user), class: "btn btn-default btn-xs" %></span>
@@ -26,3 +24,7 @@
 </table>
 
 <span><%= link "New User", to: user_path(@conn, :new) %></span>
+<div class="row back">
+  <a class="col-sm-2 col-sm-offset-5 btn text-center" id="go_back" href="/">Go Back</a>
+</div>
+<h5 class="copy">&copy; 2018</h5>
