--- a/lib/script_web/templates/user/show.html.eex
+++ b/lib/script_web/templates/user/show.html.eex
@@ -6,18 +6,14 @@
     <strong>Email:</strong>
     <%= @user.email %>
   </li>
-
-  <li>
-    <strong>Password:</strong>
-    <%= @user.password %>
-  </li>
-
-  <li>
-   <strong>Email:</strong>
-   <%= @user.credential.email %>
-  </li>
+    <li>
+      <strong>Company:</strong>
+    </li>
 
 </ul>
 
 <span><%= link "Edit", to: user_path(@conn, :edit, @user) %></span>
-<span><%= link "Back", to: user_path(@conn, :index) %></span>
+<div class="row back">
+  <a class="col-sm-2 col-sm-offset-5 btn text-center" id="go_back" href="/">Go Back</a>
+</div>
+<h5 class="copy">&copy; 2018</h5>
