--- a/lib/script_web/templates/cms/page/index.html.eex
+++ b/lib/script_web/templates/cms/page/index.html.eex
@@ -1,11 +1,12 @@
-<h2>Listing Pages</h2>
+<h2>Listing Customers</h2>
 
 <table class="table">
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Body</th>
-      <th>Views</th>
+      <th>First Name</th>
+      <th>Last Name</th>
+      <th>Address</th>
+      <th>Prescription ID</th>
 
       <th></th>
     </tr>
@@ -13,9 +14,10 @@
   <tbody>
 <%= for page <- @pages do %>
     <tr>
-      <td><%= page.title %></td>
-      <td><%= page.body %></td>
-      <td><%= page.views %></td>
+      <td><%= page.f_name %></td>
+      <td><%= page.l_name %></td>
+      <td><%= page.cust_address %></td>
+      <td><%= page.prescription_id %></td>
 
       <td class="text-right">
         <span><%= link "Show", to: cms_page_path(@conn, :show, page), class: "btn btn-default btn-xs" %></span>
@@ -27,4 +29,4 @@
   </tbody>
 </table>
 
-<span><%= link "New Page", to: cms_page_path(@conn, :new) %></span>
+<span><%= link "New Customer", to: cms_page_path(@conn, :new) %></span>
