--- a/lib/script_web/templates/session/new.html.eex
+++ b/lib/script_web/templates/session/new.html.eex
@@ -4,7 +4,7 @@
 
 <%= form_for @conn, session_path(@conn, :create), [method: :post, as: :user], fn f -> %>
   <div class="form-group">
-    <%= text_input f, :email, placeholder: "Email" %>
+    <%= text_input f, :user_name, placeholder: "User Name" %>
   </div>
 
   <div class="form-group">
@@ -18,7 +18,7 @@
 
 <%= form_for @conn, session_path(@conn, :delete), [method: :delete, as: :user], fn _ -> %>
   <div class="form-group">
-    <%= submit "logout" %>
+    <%= submit "Logout" %>
   </div>
 <% end %>
 
