--- a/lib/script_web/templates/user/index.html.eex
+++ b/lib/script_web/templates/user/index.html.eex
@@ -3,7 +3,7 @@
 <table class="table">
   <thead>
     <tr>
-      <th>Email</th>
+      <th>User Name</th>
 
       <th></th>
     </tr>
@@ -11,7 +11,7 @@
   <tbody>
 <%= for user <- @users do %>
     <tr>
-      <td><%= user.email %></td>
+      <td><%= user.user_name %></td>
 
       <td class="text-right">
         <span><%= link "Show", to: user_path(@conn, :show, user), class: "btn btn-default btn-xs" %></span>
