--- a/lib/script_web/templates/cms/page/index.html.eex
+++ b/lib/script_web/templates/cms/page/index.html.eex
@@ -6,7 +6,7 @@
       <th>First Name</th>
       <th>Last Name</th>
       <th>Address</th>
-      <th>Prescription ID</th>
+      <th>Medication</th>
 
       <th></th>
     </tr>
@@ -17,7 +17,7 @@
       <td><%= page.f_name %></td>
       <td><%= page.l_name %></td>
       <td><%= page.cust_address %></td>
-      <td><%= page.prescription_id %></td>
+      <td><%= page.med_name %></td>
 
       <td class="text-right">
         <span><%= link "Show", to: cms_page_path(@conn, :show, page), class: "btn btn-default btn-xs" %></span>
