--- a/lib/script_web/templates/cms/page/show.html.eex
+++ b/lib/script_web/templates/cms/page/show.html.eex
@@ -18,10 +18,19 @@
   </li>
 
   <li>
-    <strong>Prescription ID:</strong>
-    <%= @page.prescription_id %>
+    <strong>Pick Up Time:</strong>
+    <%= @page.pickup_time %>
   </li>
 
+  <li>
+    <strong>Delivery Time:</strong>
+    <%= @page.delivery_time %>
+  </li>
+
+  <%= if (user.user_type == '1') do %>
+  <li> test </li>
+
+  <% end %>
 
 </ul>
 
