--- a/lib/script_web/templates/cms/page/form.html.eex
+++ b/lib/script_web/templates/cms/page/form.html.eex
@@ -42,13 +42,13 @@
   </div>
 
   <div class="form-group">
-    <%= label f, "Courier Pick Up Time", class: "control-label" %>
+    <%= label f, "Courier Pick Up Time (00:00:00)", class: "control-label" %>
     <%= text_input f, :pickup_time, class: "form-control" %>
     <%= error_tag f, :pickup_time %>
   </div>
 
   <div class="form-group">
-    <%= label f, "Delivery Time", class: "control-label" %>
+    <%= label f, "Delivery Time (00:00:00)", class: "control-label" %>
     <%= text_input f, :delivery_time, class: "form-control" %>
     <%= error_tag f, :delivery_time %>
   </div>
