--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -7,6 +7,7 @@
   border: 1px solid #ff0000;
   color:#ff0000;
   margin-left:2%;
+  margin-right:2%;
 
 }
 #login:hover{
@@ -21,6 +22,27 @@
   margin-left:-12%;
 }
 #register:hover{
+  background-color: #ff0000;
+  color:#ffffff;
+}
+#pharmacy{
+  background-color: white;
+  border: 1px solid #ff0000;
+  color:#ff0000;
+  margin-right:2%;
+  margin-left: 2%;
+}
+#pharmacy:hover{
+  background-color: #ff0000;
+  color:#ffffff;
+}
+#courier{
+  background-color: white;
+  border: 1px solid #ff0000;
+  color:#ff0000;
+  margin-left:2%;
+}
+#courier:hover{
   background-color: #ff0000;
   color:#ffffff;
 }
