--- a/lib/script_web/templates/cms/page/form.html.eex
+++ b/lib/script_web/templates/cms/page/form.html.eex
@@ -54,6 +54,10 @@
   </div>
 
   <div class="form-group">
-    <%= submit "Submit", class: "btn btn-primary" %>
+    <%= submit "Submit", class: "btn", id: "submit" %>
   </div>
 <% end %>
+<div class="row back">
+  <a class="col-sm-2 col-sm-offset-5 btn text-center" id="go_back" href="/">Go Back</a>
+</div>
+<h5 class="copy">&copy; 2018</h5>
