--- a/lib/script_web/templates/cms/page/index.html.eex
+++ b/lib/script_web/templates/cms/page/index.html.eex
@@ -30,3 +30,7 @@
 </table>
 
 <span><%= link "New Customer", to: cms_page_path(@conn, :new) %></span>
+<div class="row back">
+  <a class="col-sm-2 col-sm-offset-5 btn text-center" id="go_back" href="/">Go Back</a>
+</div>
+<h5 class="copy">&copy; 2018</h5>
