--- a/lib/script_web/templates/cms/page/form.html.eex
+++ b/lib/script_web/templates/cms/page/form.html.eex
@@ -29,16 +29,23 @@
     <%= error_tag f, :pharm_id %>
   </div>
 
+  <div> Need to insert a hidden field that inputs the customer's pharmacy ID
+    based on the company_id of the enterer.</div>
+
   <div class="form-group">
+    <%= if @conn.assigns.current_user.user_type == 2 do %>
     <%= label f, "Medication Name", class: "control-label" %>
     <%= text_input f, :med_name, class: "form-control" %>
     <%= error_tag f, :med_name %>
+    <% end %>
   </div>
 
   <div class="form-group">
+    <%= if @conn.assigns.current_user.user_type == 2 do %>
     <%= label f, "Medication Information", class: "control-label" %>
     <%= text_input f, :med_info, class: "form-control" %>
     <%= error_tag f, :med_info %>
+    <% end %>
   </div>
 
   <div class="form-group">
@@ -51,6 +58,14 @@
     <%= label f, "Delivery Time (00:00:00)", class: "control-label" %>
     <%= text_input f, :delivery_time, class: "form-control" %>
     <%= error_tag f, :delivery_time %>
+  </div>
+
+  <div class="form-group">
+    <%= if @conn.assigns.current_user.user_type == 1 do %>
+    <%= label f, "Courier", class: "control-label" %>
+    <%= select(f, :courier_id, courier_select_options) %>
+    <%= error_tag f, :courier_id %>
+    <% end %>
   </div>
 
   <div class="form-group">
