--- a/lib/script_web/templates/cms/user/form.html.eex
+++ b/lib/script_web/templates/cms/user/form.html.eex
@@ -6,29 +6,35 @@
   <% end %>
 
   <div class="form-group">
+    <%= if @conn.assigns.current_user.user_type == 1 do %>
     <%= inputs_for f, :credential, fn cf -> %>
     <%= label cf, "User Name", class: "control-label" %>
     <%= text_input cf, :user_name, class: "form-control" %>
     <%= error_tag cf, :user_name %>
     <% end %>
+    <% end %>
   </div>
 
   <div class="form-group">
     <%= label f, :password, class: "control-label" %>
-    <%= text_input f, :password, class: "form-control" %>
+    <%= password_input f, :password, class: "form-control" %>
     <%= error_tag f, :password %>
   </div>
 
   <div class="form-group">
-    <%= label f, "Company ID", class: "control-label" %>
-    <%= text_input f, :company_id, class: "form-control" %>
+    <%= if @conn.assigns.current_user.user_type == 1 do %>
+    <%= label f, "Company", class: "control-label" %>
+    <%= select(f, :company_id, company_options) %>
     <%= error_tag f, :company_id %>
+    <% end %>
   </div>
 
   <div class="form-group">
+    <%= if @conn.assigns.current_user.user_type == 1 do %>
     <%= label f, "User Type", class: "control-label" %>
-    <%= text_input f, :user_type, class: "form-control" %>
+    <%= select(f, :user_type, company_select_options) %>
     <%= error_tag f, :user_type %>
+    <% end %>
   </div>
 
   <div class="form-group">
