--- a/lib/script_web/templates/cms/page/new.html.eex
+++ b/lib/script_web/templates/cms/page/new.html.eex
@@ -1,4 +1,4 @@
-<h2>New Entry</h2>
+<h2>Customer Information</h2>
 
 <%= render "form.html", Map.put(assigns, :action, cms_page_path(@conn, :create)) %>
 
