--- a/lib/script_web/templates/cms/page/show.html.eex
+++ b/lib/script_web/templates/cms/page/show.html.eex
@@ -34,6 +34,6 @@
 <span><%= link "Back", to: cms_page_path(@conn, :index) %></span>
 
 <div class="row back">
-  <a class="col-sm-2 col-sm-offset-5 btn text-center" id="go_back" href="/">Go Back</a>
+  <a class="col-sm-2 col-sm-offset-5 btn text-center" id="go_back" href="/customers">Go Back</a>
 </div>
 <h5 class="copy">&copy; 2018</h5>
