--- a/lib/script_web/templates/cms/user/edit.html.eex
+++ b/lib/script_web/templates/cms/user/edit.html.eex
@@ -3,6 +3,6 @@
 <%= render "form.html", Map.put(assigns, :action, cms_user_path(@conn, :update, @user)) %>
 
 <div class="row back">
-  <a class="col-sm-2 col-sm-offset-5 btn text-center" id="go_back" href="/">Go Back</a>
+  <a class="col-sm-2 col-sm-offset-5 btn text-center" id="go_back" href="/users">Go Back</a>
 </div>
 <h5 class="copy">&copy; 2018</h5>
