--- a/lib/script_web/templates/cms/user/show.html.eex
+++ b/lib/script_web/templates/cms/user/show.html.eex
@@ -18,6 +18,6 @@
 
 <span><%= link "Edit", to: cms_user_path(@conn, :edit, @user) %></span>
 <div class="row back">
-  <a class="col-sm-2 col-sm-offset-5 btn text-center" id="go_back" href="/">Go Back</a>
+  <a class="col-sm-2 col-sm-offset-5 btn text-center" id="go_back" href="/users">Go Back</a>
 </div>
 <h5 class="copy">&copy; 2018</h5>
